chore: Modify manifest.json

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,7 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Scandiweb test",
+  "name": "Scandiweb ReactJS developer test",
   "icons": "favicon.svg",
   "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "display": "standalone"
 }
